force-app/main/default/objects/Organization__c/fields/Organization_Code__c.field-meta.xml
<CustomField>
    <fullName>Organization_Code__c</fullName>
    <description>[Peoplesoft] - Code for the organization (department)</description>
    <externalId>true</externalId>
    <label>Organization Code</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>