force-app/main/default/objects/Organization__c/fields/Organization_Descr__c.field-meta.xml
<CustomField>
    <fullName>Organization_Descr__c</fullName>
    <description>[??] - Short Description of the organization</description>
    <label>Organization Short Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>