force-app/main/default/objects/Organization__c/fields/Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>Organization_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Peoplesoft] - Verfied or not Verified</description>
    <label>Organization Status</label>
    <type>Checkbox</type>
</CustomField>