force-app/main/default/objects/Organization__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[Peoplesoft] - Relationship to program (college)</description>
    <label>(DO NOT USE) Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>