force-app/main/default/objects/Organization__c/listViews/All_Organizations.listView-meta.xml
<ListView>
    <fullName>All_Organizations</fullName>
    <columns>NAME</columns>
    <columns>Organization_Descr__c</columns>
    <columns>Organization_Code__c</columns>
    <columns>Organization_Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Organizations</label>
</ListView>